--- a/deploy_sasRH7_DEV.yml
+++ b/deploy_sasRH7_DEV.yml
@@ -3,6 +3,7 @@
     custom_repo: true
     deploy_iptables: true
     envir: DEV.local
+    install_sas: true
 # vars_files:
 #    - ~/RHACCOUNT
   become: yes
