--- a/roles/sasRH7/tasks/main.yml
+++ b/roles/sasRH7/tasks/main.yml
@@ -81,6 +81,13 @@
 - name: Set open file descriptors to recommended > 20480
   shell: ulimit -n 32768
 
+- name: Set permissions for install
+  file:
+    path: "{{ sas_install_home }}/SAS_94M5"
+    state: directory
+    mode: 0755
+    recurse: yes
+
 - name: Run the installer in quiet mode
   # we use yes for accepting default values
   shell: "yes '' 2>/dev/null | {{ sas_install_home }}/SAS_94M5/setup.sh -console -quiet -nomsupdate -responsefile {{ sas_response_file_path }}"
