--- a/roles/sasRH7/tasks/main.yml
+++ b/roles/sasRH7/tasks/main.yml
@@ -93,7 +93,7 @@
   shell: "yes '' 2>/dev/null | {{ sas_install_home }}/SAS_94M5/setup.sh -console -quiet -nomsupdate -responsefile {{ sas_response_file_path }}"
   register: installer_cmd
   failed_when: installer_cmd.stderr != ""
-  when: install_sas
+# when: install_sas
   notify:
     - restart sas-server
   tags:
