--- a/deploy_sasRH7_DEV.local.yml
+++ b/deploy_sasRH7_DEV.local.yml
@@ -28,16 +28,32 @@
     - debug:
         msg: "RHEL Enabled Repos: {{ enabled_repos }}"
 
+    - name: Install X Windows
+      yum:
+        name: "@X Window System"
+        state: present 
+
+    - name: Install Latest EPEL
+      shell:  wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm -O /tmp/epel-release-latest-7.noarch.rpm
+    - name: Install epel
+      shell:  yum -y localinstall /tmp/epel*rpm
+
+    - name: Install XFCE
+      yum:
+        name: "@Xfce"
+        state: present
+        disable_gpg_check: yes
+
   tasks:
     - name: Install Development Tools
       yum:
         name: "@Development Tools"
         state: present
 #     shell:  yum groupinstall "Development Tools" -y
-    - name: Install X Windows
-      yum:
-        name: "@X Window System"
-        state: present 
+#   - name: Install X Windows
+#     yum:
+#       name: "@X Window System"
+#       state: present 
     - name: Install wget
       yum:
         name: wget
@@ -46,11 +62,11 @@
 #     shell:  wget https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm -O /tmp/epel-release-latest-7.noarch.rpm
 #   - name: Install epel
 #     shell:  yum -y localinstall /tmp/epel*rpm
-    - name: Install XFCE
-      yum:
-        name: "@Xfce"
-        state: present
-        disable_gpg_check: yes
+#   - name: Install XFCE
+#     yum:
+#       name: "@Xfce"
+#       state: present
+#       disable_gpg_check: yes
 
   roles:
     - epel7
