--- a/roles/sasRH7/tasks/main.yml
+++ b/roles/sasRH7/tasks/main.yml
@@ -87,8 +87,14 @@
     mode: 0755
     recurse: yes
 
-- name: Run the installer in quiet mode
+- name: change ownership of directory
   become: yes
+  become_method: sudo
+  shell:  chown -R lel "{{ sas_install_home }}/SAS_SAS_94M5"
+
+- name: Run the installer in quiet mode
+#  become: yes
+  become_user: lel
   become_method: sudo
   # we use yes for accepting default values
   shell: "yes '' 2>/dev/null | {{ sas_install_home }}/SAS_94M5/setup.sh -console -quiet -nomsupdate -responsefile {{ sas_response_file_path }}"
