--- a/roles/sasRH7/tasks/main.yml
+++ b/roles/sasRH7/tasks/main.yml
@@ -92,16 +92,16 @@
 #  become_method: sudo
 #  shell:  chown -R lel "{{ sas_install_home }}/SAS_SAS_94M5"
 
-- name: disable fingerprint checking
-  command: authconfig --disablefigerprint --update
-  become: yes
-  become_method: sudo
+#- name: disable fingerprint checking
+#  command: authconfig --disablefigerprint --update
+#  become: yes
+#  become_method: sudo
 
 - name: Run the installer in quiet mode
   become: yes
   become_method: su
-# become_user: lel
-  remote_user: lel
+  become_user: lel
+# remote_user: lel
   # we use yes for accepting default values
   shell: "yes '' 2>/dev/null | {{ sas_install_home }}/SAS_94M5/setup.sh -console -quiet -nomsupdate -responsefile {{ sas_response_file_path }}"
   register: installer_cmd
