--- a/deploy_sasPatchRH7.yml
+++ b/deploy_sasPatchRH7.yml
@@ -59,7 +59,7 @@
 ##  - pyenvRH7
 ##  - devtools7
 ##  - odbc7
-    - postgresql-client7
+##  - postgresql-client7
     - r_RH7
 #   - sasRH7
 #   - stattransfer14
