upd r texlive dep issues

--- a/roles/r_RH7/tasks/main.yml
+++ b/roles/r_RH7/tasks/main.yml
@@ -21,17 +21,17 @@
     state: link
   when: devtoolsetlink.stat.exists == false 
 
-- name: Download texinfo (1) packages for dependency resolution
-  shell: wget http://mirror.centos.org/centos/7/os/x86_64/Packages/texinfo-tex-5.1-5.el7.x86_64.rpm -O /opt/texinfo-tex-5.1-5.el7.x86_64.rpm
+# name: Download texinfo (1) packages for dependency resolution
+# shell: wget http://mirror.centos.org/centos/7/os/x86_64/Packages/texinfo-tex-5.1-5.el7.x86_64.rpm -O /opt/texinfo-tex-5.1-5.el7.x86_64.rpm
 
-- name: Download texinfo (2) packages for dependency resolution
-  shell: wget http://mirror.centos.org/centos/7/os/x86_64/Packages/texlive-epsf-doc-svn21461.2.7.4-43.el7.noarch.rpm -O /opt/texlive-epsf-doc-svn21461.2.7.4-43.el7.noarch.rpm
+# name: Download texinfo (2) packages for dependency resolution
+# shell: wget http://mirror.centos.org/centos/7/os/x86_64/Packages/texlive-epsf-doc-svn21461.2.7.4-43.el7.noarch.rpm -O /opt/texlive-epsf-doc-svn21461.2.7.4-43.el7.noarch.rpm
 
-- name: Download texinfo (3) packages for dependency resolution
-  shell: wget http://mirror.centos.org/centos/7/os/x86_64/Packages/texlive-epsf-svn21461.2.7.4-43.el7.noarch.rpm -O /opt/texlive-epsf-svn21461.2.7.4-43.el7.noarch.rpm
+# name: Download texinfo (3) packages for dependency resolution
+# shell: wget http://mirror.centos.org/centos/7/os/x86_64/Packages/texlive-epsf-svn21461.2.7.4-43.el7.noarch.rpm -O /opt/texlive-epsf-svn21461.2.7.4-43.el7.noarch.rpm
 
-- name: Download texinfo (4) packages for dependency resolution
-  shell: wget http://mirror.centos.org/centos/6/os/x86_64/Packages/texlive-texmf-xetex-2007-39.el6_7.noarch.rpm -O /opt/texlive-texmf-xetex-2007-39.el6_7.noarch.rpm
+# name: Download texinfo (4) packages for dependency resolution
+# shell: wget http://mirror.centos.org/centos/6/os/x86_64/Packages/texlive-texmf-xetex-2007-39.el6_7.noarch.rpm -O /opt/texlive-texmf-xetex-2007-39.el6_7.noarch.rpm
 
 - name: Install texlive packages
 #  shell:  yum localinstall /opt/texlive* -y
@@ -39,8 +39,8 @@
     name: texlive
     state: present
     
-- name: Download texlive dummy for for dependency resolution
-  shell: wget http://mirrors.ctan.org/support/texlive/texlive-dummy/EnterpriseLinux-7/texlive-dummy-2012a-1.el7.noarch.rpm -O /opt/texlive-dummy-2012a-1.el7.noarch.rpm
+#- name: Download texlive dummy for for dependency resolution
+# shell: wget http://mirrors.ctan.org/support/texlive/texlive-dummy/EnterpriseLinux-7/texlive-dummy-2012a-1.el7.noarch.rpm -O /opt/texlive-dummy-2012a-1.el7.noarch.rpm
 #  http://mirrors.ctan.org/support/texlive/texlive-dummy/EnterpriseLinux-7/texlive-dummy-2012a-1.el7.noarch.rpm
 
 #- name: Execute texlive dummy rpm
