--- a/roles/postgresql-client7/tasks/main.yml
+++ b/roles/postgresql-client7/tasks/main.yml
@@ -5,11 +5,25 @@
     state: latest
     disable_gpg_check: yes
 
-- name: Install postgres repository for 9.4
+#- name: Install postgres repository for 9.4
+#  yum:
+#    name: "(( postgresq94_repository_url }}"
+#    state: present
+#    disable_gpg_check: yes
+
+- name: Install postgres 9.4 packages on RHEL 7
   yum:
-    name: "(( postgresq94_repository_url }}"
+    name: "{{ item }}"
     state: present
-    disable_gpg_check: yes
+  with_items:
+    - rh-postgresql94
+    - rh-postgresql94-runtime
+    - rh-postgresql94-scldevel
+    - rh-postgresql94-postgresql-devel
+    - rh-postgresql94-postgresql-libs
+    - rh-postgresql94-postgresql-static
+    - rh-postgresql94-postgresql-plpython
+    - rh-postgresql94-postgresql-contrib
 
 - name: Install postgres repository
   yum:
