upd patch 2, add stattransfer 14

--- a/deploy_sasPatchRH7-02.yml
+++ b/deploy_sasPatchRH7-02.yml
@@ -127,7 +127,7 @@
 #   - pyenvRH7
 #   - pycharm7
 #   - gocd7
-#   - stattransfer14
+    - stattransfer14
 #   - r_RH7
 #   - r-studio-desktopRH7
 #   - r-studio-serverRH7
