--- a/roles/sasRH7/tasks/main.yml
+++ b/roles/sasRH7/tasks/main.yml
@@ -187,6 +187,14 @@
   tags:
     - sas
 
+- name: Add ODBC fix for SQL Server 
+  lineinfile:
+    path: "{{ sas_home }}/SASFoundation/{{ sas_version }}/sasv9_local.cfg"
+    line: "export ODBCSYSINI=/etc/odbc.ini" 
+# when:  workdirconfig.stat.exists == true
+  tags:
+    - sas
+
 - name: Ensure log directory exists
   file:
     path: "{{ item }}"
