--- a/deploy_sasEnfPatchRH7-Cumulative-01.yml
+++ b/deploy_sasEnfPatchRH7-Cumulative-01.yml
@@ -33,8 +33,8 @@
         name: "@Development tools"
         state: present 
 
-#   - name: Install JAVA OpenJDK 1.8
-#     shell: yum install java-1.8.0-openjdk java-1.8.0-openjdk-devel -y
+    - name: Install JAVA OpenJDK 1.8
+      shell: yum install java-1.8.0-openjdk java-1.8.0-openjdk-devel -y
 
 ## GDAL Patch ######################################################
     - name: Check if libkml is already deployed
