upd py2 scl fix

--- a/roles/python2RH7/tasks/main.yml
+++ b/roles/python2RH7/tasks/main.yml
@@ -44,7 +44,8 @@
 ##  Fixes pip breakage when updated >= 21.0
 #   scl enable python27 -- curl -O https://bootstrap.pypa.io/pip/2.7/get-pip.py
 #   scl enable python27 -- python get-pip.py
-    scl enable python27 -- pip install --upgrade "pip < 21.0"
+#   scl enable python27 -- pip install --upgrade "pip < 21.0"
+    scl enable python27 -- pip install --upgrade pip < 21.0
 #   scl enable python27 bash 
 #   pip install --upgrade pip
   become: yes
